--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,6 +8,7 @@
 	// The .devcontainer/docker-compose.yml file contains any overrides you need/want to make.
 	"dockerComposeFile": [
 		"./docker-compose.yml"
+		//"./docker-compose-nvidia.yml"
 	],
 
 	// The 'service' property is the name of the service for the container that VS Code should
