--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -16,19 +16,12 @@ services:
     #  - /dev/net/tun:/dev/net/tun
     #  - /dev/input/js2:/dev/input/js0
     #  - /dev/input/event10:/dev/input/event10
+    sysctls:
+      - net.ipv6.conf.all.disable_ipv6=0
     environment:
-      - GZ_PARTITION=cognipilot
       - DISPLAY=${DISPLAY}
-      - NVIDIA_DRIVER_CAPABILITIES=all
     volumes:
       - ./workdir:/workdir
       - ..:/workdir/cerebri
       - /tmp/.X11-unix:/tmp/.X11-unix
       - gz_config:/home/user/.gz
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - driver: nvidia
-              count: 1
-              capabilities: [gpu]
