Refactor docker files.
Signed-off-by: James Goppert <james.goppert@gmail.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,9 +12,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Pull Docker Image
         shell: bash
-        run: echo `pwd` && ls -al && cd .devcontainer && docker compose pull -q
+        run: echo `pwd` && ls -al && cd docker && docker compose pull -q
       - name: Run Docker Image
         shell: bash
-        run: echo `pwd` && ls -al && cd .devcontainer && docker compose run cerebri
-
-
+        run: echo `pwd` && ls -al && cd docker && ls -al && ls -al workdir &&  docker compose run cerebri cerebri/tests/test.sh
