--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -7,15 +7,17 @@ volumes:
 services:
 
   cerebri:
-    image: cognipilot/cerebri-build:latest
+    container_name: cerebri
+    image: cognipilot/cerebri-build
+    build:
+      dockerfile: Dockerfile
+      target: build
     tty: true
     stdin_open: true
     privileged: true
     hostname: cerebri
-    #devices:
-    #  - /dev/net/tun:/dev/net/tun
-    #  - /dev/input/js2:/dev/input/js0
-    #  - /dev/input/event10:/dev/input/event10
+    ports:
+      - 5900:5900
     sysctls:
       - net.ipv6.conf.all.disable_ipv6=0
     environment:
