--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,9 +12,9 @@ jobs:
         uses: actions/checkout@v3
       - name: Pull Docker Image
         shell: bash
-        run: echo `pwd` && ls -al && cd .devcontainer && docker compose pull -q
+        run: echo `pwd` && ls -al && cd docker && docker compose pull -q
       - name: Run Docker Image
         shell: bash
-        run: echo `pwd` && ls -al && cd .devcontainer && docker compose run cerebri
+        run: echo `pwd` && ls -al && cd docker && docker compose run cerebri
 
 
