Add quad_shadows world and set sdf file associations.
Signed-off-by: James Goppert <james.goppert@gmail.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -88,7 +88,8 @@
         "typeinfo": "cpp",
         "channels.h": "c",
         "queue": "cpp",
-        "stdio.h": "c"
+        "stdio.h": "c",
+        "*.sdf": "xml"
     },
     "cmake.sourceDirectory": "${workspaceFolder}/.devcontainer/workdir/modules/crypto/mbedtls/programs/aes",
     "cmake.configureOnOpen": false,
