--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,14 +8,13 @@ services:
 
   cerebri:
     image: cognipilot/cerebri-build:latest
+    build:
+      dockerfile: Dockerfile
+      target: build
     tty: true
     stdin_open: true
     privileged: true
     hostname: cerebri
-    #devices:
-    #  - /dev/net/tun:/dev/net/tun
-    #  - /dev/input/js2:/dev/input/js0
-    #  - /dev/input/event10:/dev/input/event10
     sysctls:
       - net.ipv6.conf.all.disable_ipv6=0
     environment:
