--- a/docker/devcontainer-default/.devcontainer.json
+++ b/docker/devcontainer-default/.devcontainer.json
@@ -31,7 +31,7 @@
 	// "postCreateCommand": "apt-get update && apt-get install -y curl",
 
 	// Uncomment to connect as a non-root user if you've added one. See https://aka.ms/vscode-remote/containers/non-root.
-	// "remoteUser": "vscode"
+	"remoteUser": "user",
 	
 	"customizations": {
 		// Configure properties specific to VS Code.
@@ -48,7 +48,9 @@
 			"ms-python.python",
 			"akiramiyakoda.cppincludeguard",
 			"donjayamanne.python-environment-manager",
-			"donjayamanne.githistory"
+			"donjayamanne.githistory",
+			"ms-vscode.remote-explorer",
+			"ms-vscode-remote.remote-ssh"
 			]
 		}
 	  }
