--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,4 @@ jobs:
         run: echo `pwd` && ls -al && cd docker && docker compose pull -q
       - name: Run Docker Image
         shell: bash
-        run: echo `pwd` && ls -al && cd docker && docker compose run cerebri
-
-
+        run: echo `pwd` && ls -al && cd docker && docker compose run cerebri cerebri/scripts/test.sh
