Remove vscode specific settings.
Signed-off-by: James Goppert <james.goppert@gmail.com>

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -7,6 +7,7 @@ volumes:
 services:
 
   cerebri:
+    container_name: cerebri
     image: ghcr.io/cognipilot/cerebri-build
     build:
       dockerfile: Dockerfile
