--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,7 +8,7 @@ services:
 
   cerebri:
     container_name: cerebri
-    image: ghcr.io/cognipilot/cerebri-build
+    image: cognipilot/cerebri-build
     build:
       dockerfile: Dockerfile
       target: build
