--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,7 +8,7 @@ services:
 
   cerebri:
     container_name: cerebri
-    image: cognipilot/cerebri-build
+    image: cognipilot/cerebri-build:0.0.0
     build:
       dockerfile: Dockerfile
       target: build
