--- a/docker/docker-compose-github.yml
+++ b/docker/docker-compose-github.yml
@@ -8,7 +8,7 @@ services:
 
   cerebri:
     container_name: cerebri
-    image: ghcr.io/cognipilot/cerebri-build
+    image: ghcr.io/cognipilot/cerebri-build:0.0.0
 
     extends:
       file: docker-compose.yml
