--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,22 +8,23 @@ services:
 
   cerebri:
     container_name: cerebri
-    image: cognipilot/cerebri-build:0.0.0
+    image: cognipilot/cerebri-build:0.0.1
     build:
       dockerfile: Dockerfile
-      target: build
     tty: true
     stdin_open: true
     privileged: true
     hostname: cerebri
     ports:
-      - 5900:5900
+      - 5820:5820
+      - 5920:5920
     sysctls:
       - net.ipv6.conf.all.disable_ipv6=0
     environment:
-      - DISPLAY=${DISPLAY}
+      - DISPLAY=$DISPLAY
+      - RUN_VNC=false
+      - RUN_ZETH=false
     volumes:
       - ./workdir:/workdir
       - ..:/workdir/cerebri
-      - /tmp/.X11-unix:/tmp/.X11-unix
       - gz_config:/home/user/.gz
