--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,14 +1,21 @@
 version: "3.9"
 
+
+
 volumes:
+
     # remembers gz config, downloaded models etc
     gz_config:
 
 services:
 
   cerebri:
+    environment:
+      - DISPLAY=$DISPLAY
+      - RUN_VNC=false
+      - RUN_ZETH=false
     container_name: cerebri
-    image: cognipilot/cerebri-build:0.0.1
+    image: ${REGISTRY}/cognipilot/cerebri-build:${TAG}
     build:
       dockerfile: Dockerfile
     tty: true
@@ -20,10 +27,6 @@ services:
       - 5920:5920
     sysctls:
       - net.ipv6.conf.all.disable_ipv6=0
-    environment:
-      - DISPLAY=$DISPLAY
-      - RUN_VNC=false
-      - RUN_ZETH=false
     volumes:
       - ./workdir:/workdir
       - ..:/workdir/cerebri
