Overrides for Docker and Trajectory Generation
This uses docker-compose.yml and
leverage overrides with defaults in the docker overrides
folder. It also adds a docker/.env file for setting
the registory and tags.

In additions, the MultirotorRefTraj.ipynb notebook has
been completed and is ready for initial testing and
debugging.

Signed-off-by: James Goppert <james.goppert@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
 *build/
-__pycache__
+*/__pycache__
 modules/zenoh-pico/zenoh-pico
 *.swp
 docker/workdir
-.devcontainer/workdir
 notebooks/.venv
 *.tmp
-*.vscode/
+lcov_html/
+lcov.info
+.vscode
+.devcontainer.json
+.devcontainer/
+.venv-cerebri/
