--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,9 +14,4 @@ find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 
 project(cerebri)
 
-target_sources(app PRIVATE
-    src/main.c
-    src/estimator.c
-    src/controller.c
-    src/channels.c
-)
+add_subdirectory(apps/rover)
