Reorganize and remove gazebo from docker.
Signed-off-by: James Goppert <james.goppert@gmail.com>

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -48,36 +48,11 @@ RUN /tmp/install/base.sh && /docker_clean.sh
 COPY install/zephyr.sh /tmp/install/zephyr.sh
 RUN /tmp/install/zephyr.sh && /docker_clean.sh
 
-COPY install/ros.sh /tmp/install/ros.sh
-RUN /tmp/install/ros.sh && /docker_clean.sh
-
 COPY install/gazebo.sh /tmp/install/gazebo.sh
 RUN /tmp/install/gazebo.sh && /docker_clean.sh
 
 COPY install/zenoh.sh /tmp/install/zenoh.sh
 RUN /tmp/install/zenoh.sh && /docker_clean.sh
-
-COPY install/ros_gz.sh /tmp/install/ros_gz.sh
-RUN /tmp/install/ros_gz.sh && /docker_clean.sh
-
-# add groups before we do anything that might add a new group
-ARG GID_INPUT=107
-ARG GID_RENDER=110
-ARG GID_VGLUSERS=1005
-RUN sudo groupadd -r -g $GID_INPUT input && \
- sudo groupadd -r -g $GID_RENDER render && \
- sudo groupadd -r -g $GID_VGLUSERS vglusers
-
-# install virtualgl and turbovnc
-COPY install/virtualgl_3.0.91_amd64.deb /tmp
-RUN cd /tmp && \
-  wget https://sourceforge.net/projects/turbovnc/files/3.0.2/turbovnc_3.0.2_amd64.deb  && \
-  sudo apt-get -y update && \
-  sudo apt-get -y upgrade && \
-  sudo DEBIAN_FRONTEND=noninteractive  apt-get install --no-install-recommends -y \
-    ./virtualgl_3.0.91_amd64.deb \
-    ./turbovnc_3.0.2_amd64.deb && \
-  /docker_clean.sh
 
 COPY install/extra.sh /tmp/install/extra.sh
 RUN /tmp/install/extra.sh && /docker_clean.sh
@@ -96,20 +71,13 @@ RUN mkdir /tmp/runtime-docker && sudo chmod 700 /tmp/runtime-docker
 
 # create a user for running the container
 ARG UID_USER=1000
-RUN sudo useradd --create-home -l -u $UID_USER -G sudo,plugdev,render,input,vglusers user && \
- echo user: $UID_USER && \
- sudo vglserver_config +egl
+RUN sudo useradd --create-home -l -u $UID_USER -G sudo,plugdev user && \
+ echo user: $UID_USER
 
 USER user
 
-ARG VNCPASSWD=cerebri
 COPY install/user_setup.sh /tmp/install/user_setup.sh
-RUN /tmp/install/user_setup.sh $VNCPASSWD && /docker_clean.sh
-
-# create setting directory for gazebo
-VOLUME /home/user/.gz
-RUN mkdir -p /home/user/.gz && \
-  chown -R user:user /home/user/.gz
+RUN /tmp/install/user_setup.sh && /docker_clean.sh
 
 # create workdir, this is where the source code will be mounted
 VOLUME /workdir
