--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,9 @@
-cmake_minimum_required(VERSION 3.20.0)
+# Copyright (c) 2023 CogniPilot Foundation
+# SPDX-License-Identifier: Apache-2.0
+#
+# This CMake file is picked by the Zephyr build system because it is defined
+# as the module CMake entry point (see zephyr/module.yml).
 
-enable_language(CXX)
+zephyr_include_directories(include)
 
-set(BOARD native_posix_64)
-
-set(ZEPHYR_EXTRA_MODULES
-    ${CMAKE_CURRENT_SOURCE_DIR}/modules/zenoh-pico
-    ${CMAKE_CURRENT_SOURCE_DIR}/drivers/sim_gz
-    ${CMAKE_CURRENT_SOURCE_DIR}/drivers/sim_core
-    )
-
-find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
-
-project(cerebri)
-
-add_subdirectory(apps/rover)
+add_subdirectory(lib)
