--- a/Kconfig
+++ b/Kconfig
@@ -1,29 +1,4 @@
-# Copyright (c) 2023 CogniPilot Foundation
+# Copyright (c) 2023 CogniPilot
 # SPDX-License-Identifier: Apache-2.0
 
-mainmenu "Cerebri"
-
-menu "Test"
-
-choice CEREBRI_PLATFORM_CHOICE
-	prompt "Platform Selection"
-	default CEREBRI_PLATFORM_ROVER
-
-config CEREBRI_PLATFORM_MULTIROTOR
-	bool "MultiRotor"
-	help
-	  Select MultiRotor for build.
-
-config CEREBRI_PLATFORM_PLANE
-	bool "Plane"
-	help
-	  Select Plane for build.
-
-config CEREBRI_PLATFORM_ROVER
-	bool "Rover"
-	help
-	  Select Rover for build.
-
-endchoice
-
-endmenu
+rsource "lib/Kconfig"
