Switch to docker name cerebri.
Signed-off-by: Benjamin Perseghetti <bperseghetti@rudislabs.com>

Co-authored-by: James Goppert <james.goppert@gmail.com>

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - DISPLAY=$DISPLAY
       - RUN_VNC=false
       - RUN_ZETH=false
-    image: ${REGISTRY}/cognipilot/cerebri-build:${TAG}
+    image: ${REGISTRY}/cognipilot/cerebri:${TAG}
     build:
       dockerfile: Dockerfile
     tty: true
