Add casadi code for trajectory generation.
Signed-off-by: James Goppert <james.goppert@gmail.com>

--- a/apps/rover/CMakeLists.txt
+++ b/apps/rover/CMakeLists.txt
@@ -20,4 +20,6 @@ target_sources(app PRIVATE
     src/estimator.c
     src/mixer.c
     src/controller.c
+    src/casadi/bezier6.c
+    src/casadi/rover.c
 )
