--- a/modules/sim_core/CMakeLists.txt
+++ b/modules/sim_core/CMakeLists.txt
@@ -2,11 +2,10 @@ zephyr_include_directories(.)
 
 zephyr_library()
 
+zephyr_compile_options(-Wno-unused-parameter)
+
 zephyr_library_sources(
     src/sim_core.cc
     src/channels.c
 )
 
-#zephyr_library_include_directories()
-
-#zephyr_library_link_libraries()
