--- a/prj.conf
+++ b/prj.conf
@@ -1,1 +1,16 @@
+CONFIG_NO_OPTIMIZATIONS=y
+
+CONFIG_SYS_CLOCK_TICKS_PER_SEC=1000
+CONFIG_NATIVE_POSIX_SLOWDOWN_TO_REAL_TIME=n
+
+CONFIG_SHELL=y
+CONFIG_CPLUSPLUS=y
+CONFIG_LIB_CPLUSPLUS=y
+CONFIG_CPP_MAIN=y
+CONFIG_STD_CPP17=y
+CONFIG_EXCEPTIONS=y
+
+CONFIG_ASAN=y
+CONFIG_NO_OPTIMIZATIONS=y
+
 CONFIG_ZBUS=y
