--- a/modules/sim_gz/CMakeLists.txt
+++ b/modules/sim_gz/CMakeLists.txt
@@ -2,8 +2,6 @@ enable_language(CXX)
 
 find_package(gz-transport12 REQUIRED)
 
-zephyr_include_directories(.)
-
 zephyr_library()
 
 zephyr_compile_options(
@@ -13,8 +11,27 @@ zephyr_compile_options(
   -Wno-maybe-uninitialized
 )
 
+set(JINJA_FILES
+  sim_gz_driver.cc
+)
+
+foreach(JINJA_FILE ${JINJA_FILES})
+  add_custom_command(
+    OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/src/${JINJA_FILE}
+    COMMAND ${JINJA_GEN}
+    --hcdf ${HCDF_FILE}
+    --template ${CMAKE_CURRENT_SOURCE_DIR}/src/${JINJA_FILE}.jinja
+    --out ${CMAKE_CURRENT_BINARY_DIR}/src
+    )
+endforeach()
+
+zephyr_include_directories(
+  src
+  ${CMAKE_CURRENT_BINARY_DIR}/src
+  )
+
 zephyr_library_sources(
-  src/sim_gz_driver.cc
+  ${CMAKE_CURRENT_BINARY_DIR}/src/sim_gz_driver.cc
 )
 
 zephyr_library_include_directories(
