--- a/package.xml
+++ b/package.xml
@@ -7,6 +7,7 @@
   <maintainer email="james.goppert@gmail.com">user</maintainer>
   <license>TODO: License declaration</license>
 
+  <build_depend>hcdformat</build_depend>
   <build_depend>python3-pyelftools</build_depend>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
