--- a/prj.conf
+++ b/prj.conf
@@ -14,3 +14,9 @@ CONFIG_ASAN=y
 CONFIG_NO_OPTIMIZATIONS=y
 
 CONFIG_ZBUS=y
+
+CONFIG_CEREBRI_ROVER_CONTROL=y
+CONFIG_CEREBRI_MULTIROTOR_CONTROL=n
+CONFIG_CEREBRI_ESTIMATOR=y
+CONFIG_CEREBRI_SIM_CORE=y
+CONFIG_CEREBRI_SIM_GZ=y
