--- a/prj.conf
+++ b/prj.conf
@@ -20,3 +20,4 @@ CONFIG_CEREBRI_MULTIROTOR_CONTROL=n
 CONFIG_CEREBRI_ESTIMATOR=y
 CONFIG_CEREBRI_SIM_CORE=y
 CONFIG_CEREBRI_SIM_GZ=y
+CONFIG_CEREBRI_BANNER=n
