Update generator for jinja/cmake.
Signed-off-by: Benjamin Perseghetti <bperseghetti@rudislabs.com>

--- a/src/multirotor_control/CMakeLists.txt
+++ b/src/multirotor_control/CMakeLists.txt
@@ -3,14 +3,18 @@ zephyr_library()
 zephyr_compile_options(-Wno-unused-parameter)
 
 set(JINJA_FILES
-  controller.c
+  mixer.c
+  parameters.h
 )
 
-foreach(JINJA_FILE JINJA_FILES)
+foreach(JINJA_FILE ${JINJA_FILES})
+  message(STATUS "jinja file: ${JINJA_FILE}")
   add_custom_command(
     OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/src/${JINJA_FILE}
-    COMMAND ${JINJA_GEN} --hcdf ${HCDF_FILE} --file
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/${JINJA_FILE}.jinja
+    DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/src/${JINJA_FILE}.jinja
+    COMMAND ${JINJA_GEN} --hcdf ${HCDF_FILE}
+    --template ${CMAKE_CURRENT_SOURCE_DIR}/src/${JINJA_FILE}.jinja
+    --out ${CMAKE_CURRENT_BINARY_DIR}/src
     )
 endforeach()
 
@@ -20,6 +24,9 @@ zephyr_include_directories(
   )
 
 zephyr_library_sources(
-  ${CMAKE_CURRENT_BINARY_DIR}/src/controller.c
+  #src/controller.c
+  #src/casadi/multicopter.c
+  #${CMAKE_CURRENT_BINARY_DIR}/src/mixer.c
+  #${CMAKE_CURRENT_BINARY_DIR}/src/parameters.h
 )
 
