--- a/app/prj.conf
+++ b/app/prj.conf
@@ -4,3 +4,7 @@
 # This file contains selected Kconfig options for the application.
 
 CONFIG_SENSOR=y
+CONFIG_CUSTOM_LIB=y
+CONFIG_SYNAPSE=y
+CONFIG_NANOPB=y
+CONFIG_TINYFRAME=y
