--- a/app/prj.conf
+++ b/app/prj.conf
@@ -5,6 +5,7 @@
 
 CONFIG_SENSOR=y
 CONFIG_CUSTOM_LIB=y
-CONFIG_SYNAPSE=y
+CONFIG_SYNAPSE_PB=y
+CONFIG_SYNAPSE_ZBUS=y
 CONFIG_NANOPB=y
 CONFIG_TINYFRAME=y
