--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,4 +1,5 @@
 # SPDX-License-Identifier: Apache-2.0
 
 add_subdirectory_ifdef(CONFIG_CUSTOM_LIB custom_lib)
-add_subdirectory_ifdef(CONFIG_SYNAPSE synapse)
+add_subdirectory_ifdef(CONFIG_SYNAPSE_PB synapse_pb)
+add_subdirectory_ifdef(CONFIG_SYNAPSE_ZBUS synapse_zbus)
