--- a/lib/synapse_pb/CMakeLists.txt
+++ b/lib/synapse_pb/CMakeLists.txt
@@ -6,12 +6,13 @@
 # 'RELPATH .'
 set(NANOPB_OPTIONS "-I${CMAKE_CURRENT_SOURCE_DIR}")
 nanopb_generate_cpp(proto_sources proto_headers RELPATH .
-    simple.proto
+    vector3.proto
+    twist.proto
 )
-zephyr_library()
+zephyr_library_named(synapse_pb)
 
 # we need to be able to include generated header files
-zephyr_library_include_directories(${CMAKE_CURRENT_BINARY_DIR}/..)
+zephyr_include_directories(${CMAKE_CURRENT_BINARY_DIR}/..)
 
 zephyr_library_sources(
   ${proto_sources}
