--- a/scripts/west-commands.yml
+++ b/scripts/west-commands.yml
@@ -4,3 +4,8 @@ west-commands:
       - name: example-west-command
         class: ExampleWestCommand
         help: an example west extension command
+  - file: scripts/test_command.py
+    commands:
+      - name: test
+        class: TestCommand
+        help: runs tests on project
